--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -8,6 +8,7 @@
     tools:context=".NavigationDrawerFragment">
 
     <ListView
+        android:id="@+id/drawer_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
