--- a/app/src/main/res/layout/drawer_list_item_menu.xml
+++ b/app/src/main/res/layout/drawer_list_item_menu.xml
@@ -5,21 +5,27 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#e1e1e1"/>
+
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
+        android:minHeight="40dp"
         android:gravity="center_vertical"
-        android:textColor="@android:color/black"
+        android:textColor="#8d8a94"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"/>
+        android:paddingRight="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:textAllCaps="true"
+        android:textSize="12sp"/>
 
     <View
-        android:id="@+id/separator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_marginBottom="36dp"/>
+        android:layout_height="1px"
+        android:background="#e1e1e1"/>
 
 </LinearLayout>
