--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -1,141 +1,211 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.lbcinternal.sensemble.CommentsActivity">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.lbcinternal.sensemble.CommentsActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                style="@style/ContactContainer">
+
+                <ImageView
+                    android:id="@+id/avatar1"
+                    style="@style/ContactAvatar"/>
+
+                <TextView
+                    android:id="@+id/name1"
+                    android:text="Hayley Lewis"
+                    style="@style/ContactName"
+                    android:layout_alignTop="@+id/avatar1"
+                    android:layout_toRightOf="@+id/avatar1"/>
+
+                <TextView
+                    android:text="@string/sample_message"
+                    style="@style/ContactComment"
+                    android:layout_below="@+id/name1"
+                    android:layout_toRightOf="@id/avatar1"
+                    android:layout_toEndOf="@+id/avatar1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#c9c5c5"
+                    tools:text="2h"
+                    android:textSize="14sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+            <View
+                style="@style/Divider"/>
+
+            <RelativeLayout
+                style="@style/ContactContainer">
+
+                <ImageView
+                    android:id="@+id/avatar2"
+                    style="@style/ContactAvatar"/>
+
+                <TextView
+                    android:id="@+id/name2"
+                    android:text="Lizzie Hindle"
+                    style="@style/ContactName"
+                    android:layout_alignTop="@+id/avatar2"
+                    android:layout_toRightOf="@+id/avatar2"/>
+
+                <TextView
+                    android:text="@string/sample_message"
+                    style="@style/ContactComment"
+                    android:layout_below="@+id/name2"
+                    android:layout_toRightOf="@id/avatar2"
+                    android:layout_toEndOf="@+id/avatar2"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#c9c5c5"
+                    tools:text="10h"
+                    android:textSize="14sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+            <View
+                style="@style/Divider"/>
+
+            <RelativeLayout
+                style="@style/ContactContainer">
+
+                <ImageView
+                    android:id="@+id/avatar3"
+                    style="@style/ContactAvatar"/>
+
+                <TextView
+                    android:id="@+id/name3"
+                    android:text="Graham Cadle"
+                    style="@style/ContactName"
+                    android:layout_alignTop="@+id/avatar3"
+                    android:layout_toRightOf="@+id/avatar3"/>
+
+                <TextView
+                    android:text="@string/sample_message"
+                    style="@style/ContactComment"
+                    android:layout_below="@+id/name3"
+                    android:layout_toRightOf="@id/avatar3"
+                    android:layout_toEndOf="@+id/avatar3"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#c9c5c5"
+                    tools:text="2d"
+                    android:textSize="14sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+            <View
+                style="@style/Divider"/>
+
+            <RelativeLayout
+                style="@style/ContactContainer">
+
+                <ImageView
+                    android:id="@+id/avatar4"
+                    style="@style/ContactAvatar"/>
+
+                <TextView
+                    android:id="@+id/name4"
+                    android:text="Harry Singh"
+                    style="@style/ContactName"
+                    android:layout_alignTop="@+id/avatar4"
+                    android:layout_toRightOf="@+id/avatar4"/>
+
+                <TextView
+                    android:text="This is a sample message that crosses over multiple lines and goes on for a while. This is a sample message that crosses over multiple lines and goes on for a while."
+                    style="@style/ContactComment"
+                    android:layout_below="@+id/name4"
+                    android:layout_toRightOf="@id/avatar4"
+                    android:layout_toEndOf="@+id/avatar4"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#c9c5c5"
+                    tools:text="2d"
+                    android:textSize="14sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+            <View
+                style="@style/Divider"/>
+
+            <RelativeLayout
+                style="@style/ContactContainer">
+
+                <ImageView
+                    android:id="@+id/avatar5"
+                    style="@style/ContactAvatar"/>
+
+                <TextView
+                    android:id="@+id/name5"
+                    android:text="John Smith"
+                    style="@style/ContactName"
+                    android:layout_alignTop="@+id/avatar5"
+                    android:layout_toRightOf="@+id/avatar5"/>
+
+                <TextView
+                    android:text="@string/sample_message"
+                    style="@style/ContactComment"
+                    android:layout_below="@+id/name5"
+                    android:layout_toRightOf="@id/avatar5"
+                    android:layout_toEndOf="@+id/avatar5"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#c9c5c5"
+                    tools:text="2d"
+                    android:textSize="14sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="bottom|right">
 
-        <RelativeLayout
-            style="@style/ContactContainer">
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_plus"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        fab:fab_colorNormal="#50e3c2"
+        fab:fab_colorPressed="#50e3c2"/>
 
-            <ImageView
-                android:id="@+id/avatar1"
-                style="@style/ContactAvatar"/>
+    </FrameLayout>
 
-            <TextView
-                android:id="@+id/name1"
-                android:text="Hayley Lewis"
-                style="@style/ContactName"
-                android:layout_alignTop="@+id/avatar1"
-                android:layout_toRightOf="@+id/avatar1"/>
-
-            <TextView
-                android:text="@string/sample_message"
-                style="@style/ContactComment"
-                android:layout_below="@+id/name1"
-                android:layout_toRightOf="@id/avatar1"
-                android:layout_toEndOf="@+id/avatar1"/>
-
-        </RelativeLayout>
-
-        <View
-            style="@style/Divider"/>
-
-        <RelativeLayout
-            style="@style/ContactContainer">
-
-            <ImageView
-                android:id="@+id/avatar2"
-                style="@style/ContactAvatar"/>
-
-            <TextView
-                android:id="@+id/name2"
-                android:text="Lizzie Hindle"
-                style="@style/ContactName"
-                android:layout_alignTop="@+id/avatar2"
-                android:layout_toRightOf="@+id/avatar2"/>
-
-            <TextView
-                android:text="@string/sample_message"
-                style="@style/ContactComment"
-                android:layout_below="@+id/name2"
-                android:layout_toRightOf="@id/avatar2"
-                android:layout_toEndOf="@+id/avatar2"/>
-
-        </RelativeLayout>
-
-        <View
-            style="@style/Divider"/>
-
-        <RelativeLayout
-            style="@style/ContactContainer">
-
-            <ImageView
-                android:id="@+id/avatar3"
-                style="@style/ContactAvatar"/>
-
-            <TextView
-                android:id="@+id/name3"
-                android:text="Graham Cadle"
-                style="@style/ContactName"
-                android:layout_alignTop="@+id/avatar3"
-                android:layout_toRightOf="@+id/avatar3"/>
-
-            <TextView
-                android:text="@string/sample_message"
-                style="@style/ContactComment"
-                android:layout_below="@+id/name3"
-                android:layout_toRightOf="@id/avatar3"
-                android:layout_toEndOf="@+id/avatar3"/>
-
-        </RelativeLayout>
-
-        <View
-            style="@style/Divider"/>
-
-        <RelativeLayout
-            style="@style/ContactContainer">
-
-            <ImageView
-                android:id="@+id/avatar4"
-                style="@style/ContactAvatar"/>
-
-            <TextView
-                android:id="@+id/name4"
-                android:text="Harry Singh"
-                style="@style/ContactName"
-                android:layout_alignTop="@+id/avatar4"
-                android:layout_toRightOf="@+id/avatar4"/>
-
-            <TextView
-                android:text="This is a sample message that crosses over multiple lines and goes on for a while. This is a sample message that crosses over multiple lines and goes on for a while."
-                style="@style/ContactComment"
-                android:layout_below="@+id/name4"
-                android:layout_toRightOf="@id/avatar4"
-                android:layout_toEndOf="@+id/avatar4"/>
-
-        </RelativeLayout>
-
-        <View
-            style="@style/Divider"/>
-
-        <RelativeLayout
-            style="@style/ContactContainer">
-
-            <ImageView
-                android:id="@+id/avatar5"
-                style="@style/ContactAvatar"/>
-
-            <TextView
-                android:id="@+id/name5"
-                android:text="John Smith"
-                style="@style/ContactName"
-                android:layout_alignTop="@+id/avatar5"
-                android:layout_toRightOf="@+id/avatar5"/>
-
-            <TextView
-                android:text="@string/sample_message"
-                style="@style/ContactComment"
-                android:layout_below="@+id/name5"
-                android:layout_toRightOf="@id/avatar5"
-                android:layout_toEndOf="@+id/avatar5"/>
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-</ScrollView>
+</FrameLayout>
