Close writing activity when sent

--- a/app/src/main/res/layout/activity_add_comment.xml
+++ b/app/src/main/res/layout/activity_add_comment.xml
@@ -8,5 +8,6 @@
           android:hint="Write a message..."
           android:gravity="top"
           android:imeOptions="actionSend"
+          android:id="@+id/field"
           android:inputType="textNoSuggestions|textCapSentences"
     />
