--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -4,7 +4,7 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lbcinternal.sensemble.CommentsActivity">
+    tools:context="com.lbcinternal.sensemble.activities.CommentsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
