--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:orientation="vertical"
-              tools:context="com.lbcinternal.sensemble.LoginActivity">
+              tools:context="com.lbcinternal.sensemble.activities.LoginActivity">
 
     <TextView
         android:text="Welcome!"
