--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,49 +2,64 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:orientation="vertical"
               tools:context="com.lbcinternal.sensemble.activities.LoginActivity">
 
     <TextView
-        android:text="Welcome!"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textColor="#4c4e52"
-        android:layout_marginTop="16dp"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/primary"
+        android:textColor="@android:color/white"
+        android:text="Login"
+        android:paddingLeft="72dp"
+        android:gravity="center_vertical"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        />
+
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="12dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/logo"/>
 
     <TextView
-        android:text="Welcome to Our Croydon."
+        android:text="Please sign in using your Shape Croydon credentials."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-light"
         android:textColor="#574e4b"
         android:textSize="16sp"/>
 
+    <View
+        style="@style/Divider"
+        android:layout_marginTop="24dp"/>
+
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:id="@+id/usernameField"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:textSize="16sp"
         android:hint="Username"/>
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:id="@+id/passwordField"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="8dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:textSize="16sp"
         android:hint="Password"/>
 
     <Button
@@ -55,9 +70,10 @@
         android:background="#37b501"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:layout_marginTop="32dp"
-        android:textSize="16sp"
-        android:onClick="signIn"/>
+        android:textSize="14sp"
+        android:onClick="signIn"
+        android:textAllCaps="true"
+        android:fontFamily="sans-serif-light"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -70,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
+            android:textColor="#ab000000"
             android:textSize="14sp"/>
 
     </FrameLayout>
