--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,110 +1,152 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:orientation="vertical"
-              tools:context="com.lbcinternal.sensemble.activities.LoginActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.lbcinternal.sensemble.activities.LoginActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/primary"
-        android:textColor="@android:color/white"
-        android:text="Login"
-        android:paddingLeft="72dp"
-        android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        />
-
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="12dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/logo"/>
-
-    <TextView
-        android:text="Please sign in using your Shape Croydon credentials."
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#574e4b"
-        android:textSize="16sp"/>
-
-    <View
-        style="@style/Divider"
-        android:layout_marginTop="24dp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/usernameField"
-        android:layout_gravity="center_horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:textSize="16sp"
-        android:hint="Username"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/passwordField"
-        android:layout_gravity="center_horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:textSize="16sp"
-        android:hint="Password"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign in"
-        android:minHeight="56dp"
-        android:background="#37b501"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:onClick="signIn"
-        android:textAllCaps="true"
-        android:fontFamily="sans-serif-light"/>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
 
         <TextView
-            android:text="Remember me:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ab000000"
-            android:textSize="14sp"/>
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/primary"
+            android:textColor="@android:color/white"
+            android:text="Login"
+            android:paddingLeft="72dp"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            />
 
-            <ToggleButton
-                android:id="@+id/remember_toggle"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginLeft="8dp"
-                android:background="@drawable/toggle_selector"
-                android:text=""
-                android:textOn=""
-                android:textOff=""/>
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="12dp"
+            android:id="@+id/imageView"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/logo"/>
+
+        <TextView
+            android:text="Please sign in using your Shape Croydon credentials."
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#574e4b"
+            android:textSize="16sp"/>
+
+        <View
+            style="@style/Divider"
+            android:layout_marginTop="24dp"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/usernameField"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="16sp"
+            android:hint="Username"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/passwordField"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="16sp"
+            android:hint="Password"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign in"
+            android:minHeight="56dp"
+            android:background="#37b501"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:onClick="signIn"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif-light"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:text="Remember me:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ab000000"
+                    android:textSize="14sp"/>
+
+                <ToggleButton
+                    android:id="@+id/remember_toggle"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="8dp"
+                    android:background="@drawable/toggle_selector"
+                    android:text=""
+                    android:textOn=""
+                    android:textOff=""/>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:layout_marginTop="16dp">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                android:text="Forgot Password"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/login_btn_bg"
+                android:textColor="#333"
+                android:textStyle="bold"/>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:layout_weight="1"
+                android:textSize="13sp"
+                android:text="Create Account"
+                android:layout_marginLeft="4dp"
+                android:background="@drawable/login_btn_bg"
+                android:textColor="#333"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
-    </FrameLayout>
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
