--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -143,7 +143,8 @@
                 android:layout_marginLeft="4dp"
                 android:background="@drawable/login_btn_bg"
                 android:textColor="#333"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:onClick="createAccount"/>
 
         </LinearLayout>
 
