--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="none"
             tools:context="com.lbcinternal.sensemble.activities.LoginActivity">
 
     <LinearLayout
@@ -98,11 +99,12 @@
                     android:textSize="14sp"/>
 
                 <ToggleButton
-                    android:id="@+id/remember_toggle"
+                    android:id="@+id/toggle"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="8dp"
                     android:background="@drawable/toggle_selector"
+                    android:checked="true"
                     android:text=""
                     android:textOn=""
                     android:textOff=""/>
