--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,8 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:textSize="16sp"
-            android:hint="Username"/>
+            android:hint="Username"
+            android:singleLine="true"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -65,7 +66,8 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:textSize="16sp"
-            android:hint="Password"/>
+            android:hint="Password"
+            android:singleLine="true"/>
 
         <Button
             android:layout_width="match_parent"
