--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -14,17 +14,18 @@
         android:padding="16dp">
 
         <ImageView
+            android:id="@+id/avatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/avatar_sample"/>
+            tools:src="@drawable/avatar_sample"/>
 
         <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:text="Hayley Lewis"
+            tools:text="Hayley Lewis"
             android:textColor="#626669"
             android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
