Improved actionbar layout

--- a/app/src/main/res/layout/actionbar_details.xml
+++ b/app/src/main/res/layout/actionbar_details.xml
@@ -2,14 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
             android:textColor="@android:color/white"
             android:text="Sample header"
             android:singleLine="true"
             android:maxLines="2"
             android:textSize="20sp"
-            android:paddingTop="16dp"
-            android:paddingBottom="12dp"
-            android:paddingLeft="16dp"
+            android:gravity="center_vertical"
             android:paddingRight="16dp"
             android:background="@color/primary"/>
