--- a/app/src/main/res/layout/fragment_post_idea.xml
+++ b/app/src/main/res/layout/fragment_post_idea.xml
@@ -4,22 +4,23 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
+    <EditText
+        android:id="@+id/titleField"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Got any feedback? Please let us know what you think of the app below."
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="18dp"
-        android:fontFamily="sans-serif-light"
-        android:textColor="#574e4b"
-        android:textSize="16sp"/>
+        android:layout_height="56dp"
+        android:textSize="20sp"
+        android:hint="Give your idea a title"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:textCursorDrawable="@null"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/darker_gray"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="200dp"
         android:background="#ecf0f1"
         android:layout_marginLeft="11dp"
         android:layout_marginRight="11dp"/>
@@ -43,13 +44,11 @@
               android:inputType="textNoSuggestions|textCapSentences|textMultiLine"
               android:textCursorDrawable="@null"/>
 
-    <requestFocus/>
-
     <Button
         android:id="@+id/submit_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Post"
         android:minHeight="56dp"
         android:background="@drawable/login_btn_selector"
         android:textColor="#e7ffffff"
