--- a/app/src/main/res/layout/fragment_post_idea.xml
+++ b/app/src/main/res/layout/fragment_post_idea.xml
@@ -19,18 +19,17 @@
         android:textCursorDrawable="@null"
         android:textSize="20sp"/>
 
-    <View
+    <com.lbcinternal.sensemble.views.CategoryPicker
+        android:id="@+id/picker"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginRight="11dp"
-        android:background="#ecf0f1"/>
+        android:background="#fff0faec"/>
 
     <EditText
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
