--- a/app/src/main/res/layout/fragment_post_idea.xml
+++ b/app/src/main/res/layout/fragment_post_idea.xml
@@ -7,29 +7,29 @@
     <EditText
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:hint="Give your idea a title"
         android:maxLength="70"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/darker_gray"
         android:textCursorDrawable="@null"
-        android:textSize="20sp"/>
+        android:textSize="18sp"/>
 
     <com.lbcinternal.sensemble.views.CategoryPicker
         android:id="@+id/picker"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="#fff0faec"/>
+        android:layout_height="140dp"
+        android:background="#83f0faec"/>
 
     <EditText
-        android:id="@+id/message"
+        android:id="@+id/body"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -57,7 +57,7 @@
         android:textSize="16sp"/>
 
     <Button
-        android:id="@+id/submit_button"
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/login_btn_selector"
